2006-10-30  Recai Oktaş <roktas@debian.org>

	Make debian/rules executable to avoid errors in 'distclean' target.

2006-10-30  Recai Oktaş <roktas@debian.org>

	Modifications to create a nice ChangeLog.
	+ Add new file 'gnuify-changelog.pl' grabbed and adapted from subversion
	  distribution.
	+ Add 'ChangeLog' target to create/update ChangeLog.
	+ Update current ChangeLog.

2006-10-30  Recai Oktaş <roktas@debian.org>

	Really fix cabal version detection.

2006-10-30  Recai Oktaş <roktas@debian.org>

	Add pandoc executable to process rules as a dependency.  Make osx_dest,
	osx-pkg distinction more clear.

2006-10-30  Recai Oktaş <roktas@debian.org>

	Parameterise "osx-pkg".

2006-10-30  Recai Oktaş <roktas@debian.org>

	Add a 'osx-pkg' target for the creation of a Mac OSX® package (using
	PackageMaker.App).  This target recursively uses 'install-program'
	target to populate OSX package directory tree.

2006-10-30  Recai Oktaş <roktas@debian.org>

	* cabalize: fix cabal version detection by using a bloody hack.
	* Makefile:
	  + Make 'uninstall-all' depends on 'uninstall-exec'.
	  + Make the default target 'all' depends on $(BINS).  Now, invoking
	    a plain 'make' builds and creates pandoc in the top directory.

2006-10-29  John MacFarlane <jgm@berkeley.edu>

	Bug fixes to make_osx_pkg_dirs.

2006-10-29  John MacFarlane <jgm@berkeley.edu>

	Added a script to make prepare directories for creation of a
	Mac OSX package (using PackageMaker.app).

2006-10-29  John MacFarlane <jgm@berkeley.edu>

	* Extracted installation instructions from README into a separate file,
	INSTALL.  Reason:  Only those who install from source will need the
	information in INSTALL, so it does not need to be included in user
	documentation.  Indeed, it might confuse people who install Pandoc by some
	other method.
	* Minor changes in README (using "Pandoc" as a generic name for the
	system, "'pandoc'" as a name for the executable).

2006-10-29  John MacFarlane <jgm@berkeley.edu>
